# mcp-server-convert

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
docs/: index.html  robots.txt  sitemap.xml
src/mcp_server_convert/: __init__.py  __main__.py  converters.py  server.py
