[project]
name = "mcp-server-convert"
version = "1.0.0"
description = "MCP server for converting documents to Markdown"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "markdownify>=0.14.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
full = [
    "ebooklib>=0.18",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "xmltodict>=0.13",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
